--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div style="text-align:center">
-  <h1>
-    {{title}}!
-  </h1>
-</div>
+<h1>My heroes</h1>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+<hero-detail [hero]="selectedHero"></hero-detail>
 
 
