--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<h1>My heroes</h1>
-<ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
-  </li>
-</ul>
-<hero-detail [hero]="selectedHero"></hero-detail>
+<h1>{{title}}</h1>
+<nav>
+	<a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+	<a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
+
 
 
