--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -2,7 +2,7 @@
   <h2>
     {{hero.name}} details
   </h2>
-  <div><label>id: </label>{{hero.heroId}}</div>
+  <div><label>index: </label>{{hero.index}}</div>
   <div>
     <label>name: </label>
     <input [(ngModel)]="hero.name" placeholder="name">
